// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders text with few matches 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "stretch",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#0E111A",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 24,
        },
      ]
    }
  >
    A
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#0E111A",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 24,
        },
      ]
    }
  >
     
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#99A1BD",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 24,
        },
      ]
    }
  >
    t
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#99A1BD",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 24,
        },
      ]
    }
  >
    e
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#0E111A",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 24,
        },
      ]
    }
  >
    x
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#0E111A",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 24,
        },
      ]
    }
  >
    t
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#0E111A",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 24,
        },
      ]
    }
  >
     
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#0E111A",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 24,
        },
      ]
    }
  >
    w
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#0E111A",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 24,
        },
      ]
    }
  >
    i
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#99A1BD",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 24,
        },
      ]
    }
  >
    t
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#99A1BD",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 24,
        },
      ]
    }
  >
    h
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#99A1BD",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 24,
        },
      ]
    }
  >
    o
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#99A1BD",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 24,
        },
      ]
    }
  >
    u
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#99A1BD",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 24,
        },
      ]
    }
  >
    t
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#99A1BD",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 24,
        },
      ]
    }
  >
     
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#99A1BD",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 24,
        },
      ]
    }
  >
    m
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#99A1BD",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 24,
        },
      ]
    }
  >
    a
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#99A1BD",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 24,
        },
      ]
    }
  >
    t
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#99A1BD",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 24,
        },
      ]
    }
  >
    c
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#99A1BD",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 24,
        },
      ]
    }
  >
    h
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#99A1BD",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 24,
        },
      ]
    }
  >
    e
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#99A1BD",
          "display": "flex",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 24,
        },
      ]
    }
  >
    s
  </Text>
</View>
`;

exports[`renders text without matches 1`] = `
<Text
  numberOfLines={1}
  style={
    Array [
      Object {
        "color": "#0E111A",
        "display": "flex",
        "fontFamily": "Inter-Medium",
        "fontSize": 16,
        "lineHeight": 24,
      },
    ]
  }
>
  A text without matches
</Text>
`;
